# cosmic-forge

./: .env  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  .tool-versions  README.md  Taskfile.yml  bun.lockb  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/: release-please-config.json  release-please-manifest.json
.github/PULL_REQUEST_TEMPLATE/: physics-reviewed.md
.github/workflows/: ci.yml  phase3-verdict.yml  release-please.yml  ucglef1-drift-alarm.yml
.lovable/: plan.md
acceptance/: qcompass-final.md
apps/: README.md
backend/: README.md  pyproject.toml
backend/audit/: conftest.py
backend/audit/agent/: test_a1_schema.py  test_a2_citation_integrity.py  test_a3_sandbox_containment.py  test_a4_determinism.py  test_a5_audit_preservation.py  test_a6_run_traceability.py  test_a7_qcompass_routes.py  test_a8_auth_tenancy.py  test_a9_observability.py
backend/audit/physics/: test_parity_hypothesis.py  test_s_checks.py
backend/configs/: gb_off_control.yaml  kawai_kim_baseline.yaml
backend/docs/: agent_demo.ipynb
backend/src/cosmic_forge_viz/: __init__.py  baker.py  cli.py  downsample.py  fixtures.py  formulas.py  phases.py  protocol.py  schema.py  server.py
backend/src/ucgle_f1/: __init__.py  cli.py  domain.py
backend/src/ucgle_f1/adapters/: __init__.py  cosmology_manifest.py  qcompass.py
backend/src/ucgle_f1/m1_background/: __init__.py  background.py
backend/src/ucgle_f1/m2_scalar/: __init__.py  potentials.py
backend/src/ucgle_f1/m3_modes/: __init__.py  chiral.py
backend/src/ucgle_f1/m4_anomaly/: __init__.py  anomaly.py
backend/src/ucgle_f1/m5_boltzmann/: __init__.py  ulysses_bridge.py
backend/src/ucgle_f1/m6_gw/: __init__.py  sgwb.py
backend/src/ucgle_f1/m7_infer/: __init__.py  audit.py  hydra_cfg.py  inference.py  pipeline.py
backend/src/ucgle_f1/m8_agent/: __init__.py  auth.py  bibliography.json  mcp_server.py  observability.py  qcompass_routes.py  runs.py  scans.py  server.py
backend/src/ucgle_f1/m8_agent/memory/: __init__.py  store.py
backend/src/ucgle_f1/m8_agent/models/: __init__.py  anthropic.py  base.py  local_llamacpp.py  local_ollama.py  local_vllm.py  openai.py  registry.py
backend/src/ucgle_f1/m8_agent/prompts/: __init__.py  system.py
backend/src/ucgle_f1/m8_agent/sandbox/: __init__.py  dry_run.py
backend/src/ucgle_f1/m8_agent/tools/: __init__.py  introspection.py  patch.py  research.py  simulator.py
backend/tests/: conftest.py  test_lovable_contract.py  test_qcompass_adapter.py
backend/tests/agent/: test_approval_flow.py  test_server_routes.py
backend/tests/cosmic_forge_viz/: test_baker_protocol.py  test_schema.py  test_server.py
backend/tests/integration/: test_domain_parity.py
backend/tests/test_qcompass_adapter/: test_adapter_matches_direct_pipeline_eta_b.yml
backend/tests/unit/: test_m1.py  test_m2.py  test_pipeline.py
backend/tests/viz/: test_baker.py  test_downsample.py  test_fixtures.py  test_protocol.py  test_schema.py  test_server.py
docker/: Dockerfile.cpu  Dockerfile.cuda12
docs/: audit.md  wcag-audit.md
docs/architecture/: gpu-scaling.md
docs/frontend/: qcompass-gap-audit.md
docs/ops/: dr-runbook.md
docs/qa/: accessibility-checklist.md  chart-resizing.md  visualizer-contract.md
docs/qcompass/: index.md  lovable-handoff-mismatches.md  references.bib
e2e/: chemistry-h2-flow.spec.ts  cosmology-byte-identity.spec.ts  playwright.config.ts  smoke.spec.ts  visualizer-domain.spec.ts
public/: manifest.webmanifest  robots.txt  sitemap.xml
public/fixtures/: benchmarks.json  models.json
scripts/: audit-gate.ts  gen_visualizer_fixtures.py
src/: routeTree.gen.ts  router.tsx  start.ts  styles.css
src/components/: LiteratureCompareSheet.tsx  ModelDomainBadge.tsx  ProvenancePanel.tsx  ProvenanceWarningBanner.tsx  angle-slider.tsx  arxiv-link.tsx  author-badge.tsx  bogoliubov-gauge.tsx  brand-mark.tsx  client-only.tsx  context-chip.tsx  cost-badge.tsx  data-error-panel.tsx  domain-selector.tsx  domain-shell.tsx  equation-block.tsx  error-page.tsx  (+20 more)
supabase/: config.toml
(+292 files in other folders)
